nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-static  # Conecta ao Deployment pelo label
  ports:
  - protocol: TCP
    port: 80        # Porta exposta pelo Service
    targetPort: 80  # Porta do contêiner (Nginx)
